cancer.gov theme and content added

--- a/templates/accounts/account/login.html
+++ b/templates/accounts/account/login.html
@@ -46,10 +46,10 @@
                 <div class="card my-3 px-5">
                     <div class="card-body sign-up">
                         <h4 class="card-title">
-                            Don't have an account with CTB?
+                            Create an account to log in and search our biorepository
                         </h4>
                         <div class="d-grid gap-2">
-                            <a class="btn btn-secondary" href="{{ signup_url }}">{% trans "Register" %}</a>
+                            <a class="btn btn-secondary" href="{{ signup_url }}">Create an account</a>
                         </div>
                     </div>
                 </div>
