--- a/templates/accounts/account/password_reset.html
+++ b/templates/accounts/account/password_reset.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
+        {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
     <div class="container">
         <div class="row justify-content-center py-5">
@@ -20,7 +20,7 @@
                     <div class="card">
                         <div class="card-header"><h4>Password Reset</h4></div>
                         <div class="card-body p-5">
-                            <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+                            <p>Forgot your password? Enter your email address below to reset it.</p>
                             {% csrf_token %}
                             {{ form.as_p }}
                             <div class="d-grid gap-2">
@@ -28,8 +28,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            {% blocktrans %}Please contact
-                                <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a> if you have any
+                            {% blocktrans %}Please <a href="mailto:ctb-support@isb-cgc.org">contact us</a> if you have
                                 trouble resetting your password.{% endblocktrans %}
                         </div>
                     </div>
