--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -45,8 +45,8 @@
 
             </div>
         </div>
-        <div class="bg-lightgrey-theme d-flex text-center justify-content-center pt-4 pb-5">
-            <div class="col-8 pb-3 fs-3">The CTB website is hosted by the U.S. National Cancer Institute (NCI), <a
+        <div class="bg-lightgrey-theme d-flex text-center justify-content-center py-5">
+            <div class="col-8 pb-3 fs-4">The CTB website is hosted by the U.S. National Cancer Institute (NCI), <a
                     href="https://dceg.cancer.gov/" target="_blank" rel="noopener noreferrer">Division of Cancer
                 Epidemiology and Genetics</a>. Learn about DCEG research on the Chernobyl <a target="_blank"
                                                                                              rel="noopener noreferrer"
@@ -79,12 +79,6 @@
                                 <div class="mt-3">Find your biological samples for your study</div>
                             </a>
                         </div>
-                        {#                        <div class="col stat-card">#}
-                        {#                            <a href="{% url 'contact' %}" class="fill-div">#}
-                        {#                                <h4 class="fw-bold dark-aqua-text"><i class="fas fa-envelope"></i><br/>Contact Us</h4>#}
-                        {#                                <div class="mt-3">For any information or questions</div>#}
-                        {#                            </a>#}
-                        {#                        </div>#}
                     </div>
                 </div>
             </div>
