--- a/templates/donors/dashboard.html
+++ b/templates/donors/dashboard.html
@@ -54,11 +54,12 @@
                                         information), you
                                         will have the option to download an application form. Instructions on submission
                                         of
-                                        applications for access can be found on the form. Information about the review
-                                        process of
-                                        applications is available on the <a href="{% url 'access_to_materials' %}"
-                                                                            target="_blank" rel="noopener">Access to
-                                            Materials</a>
+                                        applications for access can be found on the form.
+{#                                        Information about the review#}
+{#                                        process of#}
+{#                                        applications is available on the <a href="{% url 'access_to_materials' %}"#}
+{#                                                                            target="_blank" rel="noopener">Access to#}
+{#                                            Materials</a>#}
                                         page.
                                         Applications must be approved before any samples can be released.</p>
                                     <p>In your application, is important that you specify the criteria for sample
@@ -103,7 +104,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row pb-5">
             <div class="col-lg-6">
                 <div class="d-grid gap-2 mb-3">
                     <a class="btn btn-primary" href="{% url 'search_tissue_samples' %}">Proceed to Search Samples <i
