--- a/templates/share/site_footer.html
+++ b/templates/share/site_footer.html
@@ -17,14 +17,12 @@
                     <div class=""><a href="https://www.hhs.gov/vulnerability-disclosure-policy/index.html"
                                      target="_blank" rel="noopener noreferrer">HHS Vulnerability Disclosure</a></div>
                 </div>
-
-
                 <div class="col text-end">
-                    <div class="fw-bold fs-4">Contact Us</div>
-                    <div>
-                        <a href="mailto:ncicontactdceg@mail.nih.gov" class="me-3">ncicontactdceg@mail.nih.gov</a>
-                        <span class=""><a href="{% url 'contact' %}">Website Support</a></span>
-                    </div>
+                    <div class="fw-bold fs-5"><a href="{% url 'contact' %}">Contact Us</a></div>
+{#                    <div>#}
+{#                        <a href="mailto:ncicontactdceg@mail.nih.gov" class="me-3">ncicontactdceg@mail.nih.gov</a>#}
+{#                        <span class=""><a href="{% url 'contact' %}">Website Support</a></span>#}
+{#                    </div>#}
                 </div>
             </div>
             <div class="row mt-3">
