--- a/templates/ctb/about.html
+++ b/templates/ctb/about.html
@@ -12,7 +12,6 @@
 {% block page_name %}about_page{% endblock %}
 
 {% block page_header %}
-    {#    <div class="page-banner">About the CTB</div>#}
     <div class="container mt-2">
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
@@ -27,11 +26,8 @@
 {% block content %}
     <div class="container">
         <div class="row my-3">
-            <div class="col-lg-3 pt-5">
-                <div class="list-group">
-                    <div class="list-group-item list-group-item-header">
-                        About
-                    </div>
+            <div class="col-lg-4 pt-5 d-flex d-none d-lg-block">
+                <div class="list-group pt-5">
                     <a href="#about" class="list-group-item list-group-item-action">
                         About the CTB
                     </a>
@@ -56,7 +52,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-9 px-4">
+            <div class="col-lg-8 px-4">
                 <div id="about" class="pt-5">
                     <h3 class="pt-5">About the CTB</h3>
                     <div class="mt-3">
