--- a/templates/ctb/research.html
+++ b/templates/ctb/research.html
@@ -26,11 +26,8 @@
 {% block content %}
     <div class="container">
         <div class="row my-3">
-            <div class="col-lg-3 pt-5">
-                <div class="list-group">
-                    {#                    <div class="list-group-item list-group-item-header">#}
-                    {##}
-                    {#                    </div>#}
+            <div class="col-lg-4 pt-5 d-none d-lg-block">
+                <div class="list-group pt-5">
                     <a href="#research" class="list-group-item list-group-item-action">
                         Research and CTB Data Access
                     </a>
@@ -46,7 +43,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-9 px-4">
+            <div class="col-lg-8 px-4">
                 <div id="research" class="pt-5">
                     <h3 class="pt-5">Research and CTB Data Access</h3>
                     <div class="mt-3">
