--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -32,7 +32,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav col-1">
-                    {% if user.is_verified %}
+                    {% if user.is_authenticated %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle {% if 'users/' in request.path or 'account' in request.path %} active {% endif %}"
                                data-bs-toggle="dropdown" href="#" role="button"
@@ -55,7 +55,7 @@
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link"
+                            <a class="nav-link {% if 'login/' in request.path %} active {% endif %}"
                                href="{% url 'two_factor:login' %}">
                                 <i class="fas fa-sign-in-alt"></i><span class="sr-only">Sign-In</span>
                             </a>
@@ -67,8 +67,8 @@
     </nav>
 </div>
 {% if 'search_facility/' in request.path %}
-    <div id="ctb-secondary-navbar">
-        <div class="container pt-2">
+    <div id="ctb-secondary-navbar" class="d-flex justify-content-center">
+        <div class="col-lg-9 pt-2">
             <nav class="nav navbar-ctb" aria-label="Secondary navigation">
                 {% if user.is_verified %}
                     <a class="nav-link {% if 'dashboard/' in request.path %} active {% endif %}"
