--- a/templates/ctb/about.html
+++ b/templates/ctb/about.html
@@ -159,7 +159,8 @@
                         thyroid tissue and DNA extracted from blood. A frozen section is taken from each portion of
                         tissue before extraction to verify its nature. Quality control is performed on nucleic acid
                         extracted from all tissues and blood samples. In addition, paraffin sections and tissue
-                        microarrays are available. Researchers who request access to samples are provided with extracted
+                        microarrays are available. Researchers who <a href="{% url 'research' %}">request access</a> to
+                        samples are provided with extracted
                         nucleic acid from thyroid tissue, rather than a small piece of tissue. This maximizes the amount
                         of data that can potentially be obtained from a single specimen and enables multiple molecular
                         biological studies to be carried out for each case. Aliquots of serum are also available.
