--- a/templates/donors/dashboard.html
+++ b/templates/donors/dashboard.html
@@ -44,56 +44,35 @@
                             <div id="ctb-intro-one" class="accordion-collapse collapse"
                                  aria-labelledby="ctb-intro-acc-headingOne" data-bs-parent="#ctb-intro-acc">
                                 <div class="accordion-body small">
-                                    <p>After completing your biosample search you can further
-                                        refine your search using a number of
-                                        clinical parameters (e.g. TNM status, AJCC Clinical stage and treatment and
-                                        outcome). If you
-                                        do not wish to refine your search, you can skip this step. Once you have defined
-                                        the
-                                        biosamples that you wish to access (with or without additional clinical
-                                        information), you
-                                        will have the option to download an application form. Instructions on submission
-                                        of
-                                        applications for access can be found on the form.
-{#                                        Information about the review#}
-{#                                        process of#}
-{#                                        applications is available on the <a href="{% url 'access_to_materials' %}"#}
-{#                                                                            target="_blank" rel="noopener">Access to#}
-{#                                            Materials</a>#}
-                                        page.
-                                        Applications must be approved before any samples can be released.</p>
+                                    <p>After completing your biosample search you can further refine your search using a
+                                        number of clinical parameters (e.g. TNM status, AJCC Clinical stage and
+                                        treatment and outcome). If you do not wish to refine your search, you can skip
+                                        this step. Once you have defined the biosamples that you wish to access (with or
+                                        without additional clinical information), you will have the option to download
+                                        an application form. Instructions on submission of applications for access can
+                                        be found on the form. Information about the review process of applications is
+                                        available on the <a href="{% url 'research' %}" target="_blank" rel="noopener">Research</a>
+                                        page. Applications must be approved before any samples can be released.</p>
                                     <p>In your application, is important that you specify the criteria for sample
-                                        selection as
-                                        exactly as possible, by completing all sections of the Filter. If your
-                                        application is
-                                        approved, samples will be provided according to the search criteria you have
-                                        used in the
-                                        Filter. Screen shots of the biosample search may be appended to your application
-                                        if you
-                                        wish.</p>
+                                        selection as exactly as possible, by completing all sections of the Filter. If
+                                        your application is approved, samples will be provided according to the search
+                                        criteria you have used in the Filter. Screen shots of the biosample search may
+                                        be appended to your application if you wish.</p>
                                     <p>The search facility will provide you with the number of cases that fit your
-                                        search criteria –
-                                        you will not receive detailed information on the individual cases until your
-                                        project is
-                                        approved.</p>
+                                        search criteria – you will not receive detailed information on the individual
+                                        cases until your project is approved.</p>
                                     <p>Samples issued following approval of the project will be accompanied by the
-                                        following dataset
-                                        – CTB unique patient identifier, sample unique identifier, pathological
-                                        diagnosis, age at
-                                        the accident, age at operation, gender, and oblast (administrative region) of
-                                        residence at
-                                        the time of the accident. Information on estimated thyroid radiation dose can
-                                        also be
-                                        provided if justified in your application. Clinical information as requested
-                                        using the
+                                        following dataset – CTB unique patient identifier, sample unique identifier,
+                                        pathological diagnosis, age at the accident, age at operation, gender, and
+                                        oblast (administrative region) of residence at the time of the accident.
+                                        Information on estimated thyroid radiation dose can also be provided if
+                                        justified in your application. Clinical information as requested using the
                                         clinical search facility can also be provided on each case, providing it has
-                                        been justified
-                                        in the application.</p>
+                                        been justified in the application.</p>
                                     <p>If you have any queries, please email these to <a
                                             href="mailto:ctb-support@isb-cgc.org"
                                             target="_top">ctb-support@isb-cgc.org</a>.
-                                        Online
-                                        information using the search tools is available where you see the <i
+                                        Online information using the search tools is available where you see the <i
                                                 class="fa-solid fa-circle-question info-color"></i> icon.
                                     </p>
                                 </div>
@@ -120,7 +99,8 @@
             </div>
             <div class="col-lg-6">
                 <div class="d-grid gap-2 mb-3">
-                    <a class="btn btn-primary" href="{% url 'make_application' %}"><i class="fas fa-edit"></i> Make Application</a>
+                    <a class="btn btn-primary" href="{% url 'make_application' %}"><i class="fas fa-edit"></i> Make
+                        Application</a>
                 </div>
                 <div class="border rounded bg-light p-3">
                     <div>
