password_reset form updated

--- a/templates/accounts/account/password_reset.html
+++ b/templates/accounts/account/password_reset.html
@@ -22,7 +22,18 @@
                         <div class="card-body p-5">
                             <p>Forgot your password? Enter your email address below to reset it.</p>
                             {% csrf_token %}
-                            {{ form.as_p }}
+                            {% for field in form %}
+                                <div class="fieldWrapper pb-4">
+                                    {{ field.errors }}
+                                    {% if 'E-mail:' in field.label_tag %}
+                                        <label class="form-label">Enter e-mail address:</label>
+                                        <div>{{ field }}</div>
+                                    {% else %}
+                                        <label class="form-label">{{ field.label_tag }}</label>
+                                        <div>{{ field }}</div>
+                                    {% endif %}
+                                </div>
+                            {% endfor %}
                             <div class="d-grid gap-2">
                                 <button class="btn btn-primary" type="submit">{% trans "Reset My Password" %}</button>
                             </div>
