password_reset form updated

--- a/templates/ctb/research.html
+++ b/templates/ctb/research.html
@@ -53,7 +53,8 @@
                         availability of samples and data that match the search criteria. Interested researchers can
                         submit a request for data and materials using an application form and entering key information
                         on the research question, study design, laboratory and analytic methods, as well as researcher
-                        qualifications. View a sample application here.
+                        qualifications. View a sample application <a href="{% static 'ctb_sample_application.pdf' %}"
+                                                                     rel="noopener noreferrer" target="_blank">here</a>.
                     </div>
                     <div class="mt-3">The CTB will communicate with researchers who submit a request, if the questions
                         in their proposal have been addressed by previous projects or questions or is likely to produce
