--- a/templates/donors/dashboard.html
+++ b/templates/donors/dashboard.html
@@ -48,12 +48,11 @@
                                         number of clinical parameters (e.g. TNM status, AJCC Clinical stage and
                                         treatment and outcome). If you do not wish to refine your search, you can skip
                                         this step. Once you have defined the biosamples that you wish to access (with or
-                                        without additional clinical information), you will have the option to download
-                                        an application form. Instructions on submission of applications for access can
-                                        be found on the form. Information about the review process of applications is
-                                        available on the <a href="{% url 'research' %}" target="_blank" rel="noopener">Research</a>
+                                        without additional clinical information), you may submit an application to
+                                        access CTB samples or information. To learn more about the application process,
+                                        please visit our <a href="{% url 'research' %}" target="_blank" rel="noopener">Research</a>
                                         page. Applications must be approved before any samples can be released.</p>
-                                    <p>In your application, is important that you specify the criteria for sample
+                                    <p>In your application, it is important that you specify the criteria for sample
                                         selection as exactly as possible, by completing all sections of the Filter. If
                                         your application is approved, samples will be provided according to the search
                                         criteria you have used in the Filter. Screen shots of the biosample search may
