--- a/templates/donors/driver_search_facility.html
+++ b/templates/donors/driver_search_facility.html
@@ -14,14 +14,12 @@
 {% block page_class %}biosample_tab{% endblock %}
 
 {% block page_header %}
-    <div class="container">
-        <div class="pt-3">
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item active" aria-current="page">Oncogenic Driver Search Facility</li>
-                </ol>
-            </nav>
-        </div>
+    <div class="container mt-4">
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item active" aria-current="page">Oncogenic Driver Search Facility</li>
+            </ol>
+        </nav>
     </div>
 {% endblock %}
 Search Tissue Samples
