--- a/templates/donors/intake_form.html
+++ b/templates/donors/intake_form.html
@@ -1,4 +1,4 @@
-<div class="py-3 px-5">
+<div class="py-3 px-md-5">
     <h4 class="mb-4 text-center my-2">Information for Applicants for Access to Materials and/or
         Information from the CTB
     </h4>
