--- a/templates/two_factor/core/login.html
+++ b/templates/two_factor/core/login.html
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     {% if wizard.steps.current == 'auth' %}
-                        <div class="card my-3 px-4 py-4">
+                        <div class="card my-3 px-md-4 py-4">
                             <div class="card-body sign-up">
                                 <h4 class="card-title pb-4">
                                     Create an account <span class="fw-normal fs-5"> to log in and search our biorepository</h4>
