--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,8 @@
 /*@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');*/
 
 body {
-    padding-top: 85px;
+    padding-top: 82px;
+    /*padding-top: 85px;*/
     font-family: Poppins,Helvetica Neue,Helvetica,Roboto,Arial,sans-serif,serif;
     /*font-family: 'Source Sans Pro', sans-serif;*/
 }
@@ -108,9 +109,21 @@ a.fill-div {
 }
 
 @media screen and (max-width: 1020px) {
+    body{
+        padding-top: 67px;
+    }
     .stat-card {
         margin: 5px;
     }
+    .breadcrumb-item{
+        font-size: 1rem;
+    }
+    /*#ctb-secondary-navbar .nav-link {*/
+    /*    padding: 0 .5rem;*/
+    /*    margin: 0 .2rem;*/
+    /*    font-size: .9rem;*/
+    /*}*/
+
 }
 
 #ctb-collapsible-navbar .nav-item > a, #ctb-main-navbar a.navbar-brand{
@@ -140,7 +153,7 @@ a.fill-div {
 #ctb-secondary-navbar{
     background-color: #004971;
     position: fixed;
-    top: 85px;
+    /*top: 85px;*/
     right: 0;
     left: 0;
     z-index: 900;
@@ -156,10 +169,8 @@ a.fill-div {
 
 #ctb-secondary-navbar .nav-link:hover{
     border: 0;
-    /*border: 0 !important;*/
     background-color: #4a6b7e;
     color: white;
-    /*background-color: #d7e5f5;*/
 }
 
 #ctb-secondary-navbar .nav-link.active, #ctb-secondary-navbar .nav-link.active:hover {
