--- a/templates/accounts/account/login.html
+++ b/templates/accounts/account/login.html
@@ -43,7 +43,7 @@
 {#                        <p><a class="btn btn-secondary secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Password Reset" %}</a></p>#}
 {#                    </div>#}
 {#                </div>#}
-                <div class="card my-3 px-5">
+                <div class="card my-3 px-md-5">
                     <div class="card-body sign-up">
                         <h4 class="card-title">
                             Create an account to log in and search our biorepository
