--- a/templates/ctb/about.html
+++ b/templates/ctb/about.html
@@ -12,7 +12,7 @@
 {% block page_name %}about_page{% endblock %}
 
 {% block page_header %}
-    <div class="container mt-2">
+    <div class="container mt-4">
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'landing_page' %}">CTB</a></li>
@@ -25,36 +25,10 @@
 
 {% block content %}
     <div class="container">
-        <div class="row my-3">
-            <div class="col-lg-4 pt-5 d-flex d-none d-lg-block">
-                <div class="list-group pt-5">
-                    <a href="#about" class="list-group-item list-group-item-action">
-                        About the CTB
-                    </a>
-                    <a class="list-group-item list-group-item-action" href="#history">
-                        History, Funding, and Organization
-                    </a>
-                    <a class="list-group-item list-group-item-action" href="#purpose">
-                        Purpose of the CTB
-                    </a>
-                    <a class="list-group-item list-group-item-action" href="#location">
-                        CTB Location
-                    </a>
-                    <a class="list-group-item list-group-item-action" href="#consent">
-                        Informed Consent and Privacy Protection
-                    </a>
-                    <a class="list-group-item list-group-item-action" href="#samples">
-                        Description of Available Samples and Sample Access
-                    </a>
-                    <a class="list-group-item list-group-item-action" href="#archives">
-                        Maintaining an Archive of Findings
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-lg-8 px-4">
-                <div id="about" class="pt-5">
-                    <h3 class="pt-5">About the CTB</h3>
+        <div class="row my-3 d-flex justify-content-center">
+            <div class="col-lg-10 px-md-4">
+                <div id="about" class="pt-3">
+                    <h3 class="pt-3">About the CTB</h3>
                     <div class="mt-3">
                         The Chernobyl (Chornobyl in Ukrainian) Tissue Bank (CTB) is a repository of biological material
                         and data from patients with thyroid tumors who were exposed as children or adolescents to
@@ -63,7 +37,7 @@
                         samples.
                     </div>
                 </div>
-                <div id="history" class="pt-5">
+                <div id="history" class="pt-3">
                     <h3 class="pt-5">History, Funding, and Organization</h3>
                     <div class="mt-3">Since CTB was found in October 1998, the project has been supported by a number of
                         sponsors including the European Commission, the World Health Organization, the U.S. National
@@ -77,7 +51,7 @@
                         are currently suspended for political reasons.
                     </div>
                 </div>
-                <div id="purpose" class="pt-5">
+                <div id="purpose" class="pt-3">
                     <h3 class="pt-5">Purpose of the CTB</h3>
                     <div class="mt-3">
                         The objective of the CTB is to provide a research resource for studies of the health
@@ -105,7 +79,7 @@
                         </ul>
                     </div>
                 </div>
-                <div id="location" class="pt-5">
+                <div id="location" class="pt-3">
                     <h3 class="pt-5">CTB Location</h3>
                     <div class="mt-3">
                         The tissue bank is located at the V.P. Komisarenko Institute of Endocrinology and Metabolism
@@ -116,7 +90,7 @@
                         center staff who make key information available to researchers wishing to access the material.
                     </div>
                 </div>
-                <div id="consent" class="pt-5">
+                <div id="consent" class="pt-3">
                     <h3 class="pt-5">Informed Consent and Privacy Protection</h3>
                     <div class="mt-3">
                         The CTB obtains informed consent for each sample collected and ensures proper description,
@@ -131,7 +105,7 @@
                         involved, are followed to ensure privacy.
                     </div>
                 </div>
-                <div id="samples" class="pt-5">
+                <div id="samples" class="pt-3">
                     <h3 class="pt-5">Description of Available Samples and Sample Access</h3>
                     <div class="mt-3">
                         The CTB currently includes material and information from patients with thyroid carcinomas and
@@ -172,7 +146,7 @@
                         and, for certain tumor specimens, the driver mutation(s) identified to date.
                     </div>
                 </div>
-                <div id="archives" class="py-5">
+                <div id="archives" class="pt-3 pb-5">
                     <h3 class="pt-5">Maintaining an Archive of Findings</h3>
                     <div class="mt-3">All data generated with samples from the CTB are collected and maintained in an
                         online
