--- a/templates/ctb/user_detail.html
+++ b/templates/ctb/user_detail.html
@@ -28,7 +28,7 @@
 {% block link_page_name %}user-details{% endblock %}
 {% block page_name %}user-details{% endblock %}
 {% block page_header %}
-    <div class="container mt-2">
+    <div class="container mt-4">
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'landing_page' %}">CTB</a></li>
@@ -54,7 +54,7 @@
                     </a>
                 </div>
                 <div class="card user-panel my-2">
-                    <div class="card-body px-5 py-3">
+                    <div class="card-body px-md-5 py-3">
                         <table class="table user-info" role="presentation">
                             <tr>
                                 <th scope="row">User Name</th>
