--- a/templates/donors/saved_searches.html
+++ b/templates/donors/saved_searches.html
@@ -17,7 +17,7 @@
 
 {% block content %}
     <div class="container py-3">
-        <div class="row">
+        <div class="row pb-5">
             <div class="col">
                 <div class="border rounded bg-light p-3">
                     <h5 class="fw-bold">
