--- a/templates/share/site_footer.html
+++ b/templates/share/site_footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 <footer class="mt-auto">
     <div class="container">
-        <div class="px-2 py-3 my-1">
+        <div class="px-md-2 py-3 my-1">
             <div class="row">
                 <div class="col">
                     <div class="fw-bold fs-3">Chernobyl Tissue Bank</div>
@@ -19,10 +19,10 @@
                 </div>
                 <div class="col text-end">
                     <div class="fw-bold fs-5"><a href="{% url 'contact' %}">Contact Us</a></div>
-{#                    <div>#}
-{#                        <a href="mailto:ncicontactdceg@mail.nih.gov" class="me-3">ncicontactdceg@mail.nih.gov</a>#}
-{#                        <span class=""><a href="{% url 'contact' %}">Website Support</a></span>#}
-{#                    </div>#}
+                    {#                    <div>#}
+                    {#                        <a href="mailto:ncicontactdceg@mail.nih.gov" class="me-3">ncicontactdceg@mail.nih.gov</a>#}
+                    {#                        <span class=""><a href="{% url 'contact' %}">Website Support</a></span>#}
+                    {#                    </div>#}
                 </div>
             </div>
             <div class="row mt-3">
@@ -43,6 +43,11 @@
                     </div>
                     <div>
                         <a target="_blank" rel="noopener noreferrer" href="https://usa.gov/">USA.gov</a>
+                    </div>
+                    <div class="mt-3">
+                        <a target="_blank" rel="noopener noreferrer"
+                           href="https://dceg.cancer.gov/research/what-we-study/chernobyl-nuclear-accident">Learn about
+                            DCEG research on the Chernobyl accident</a>
                     </div>
                     <div class="mt-4"><a class="fw-bold fs-5" href="#">Back to Top</a></div>
                 </div>
